# Wisely

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/: .dockerignore  .env.example  README.md  pyproject.toml
backend/wisely_api/: manage.py
backend/wisely_api/books/: admin.py  models.py  review_urls.py  serializers.py  tests.py  urls.py  views.py
backend/wisely_api/books/migrations/: 0001_initial.py  0002_initial.py  0003_book_cover_source_book_cover_url_and_more.py  0004_book_isbn_10.py
backend/wisely_api/books/services/: __init__.py  affiliate.py  covers.py  google_books.py  importer.py  open_library.py
backend/wisely_api/clinicians/: admin.py  models.py  npi.py  serializers.py  tests.py  urls.py  views.py
backend/wisely_api/clinicians/migrations/: 0001_initial.py  0002_initial.py  0003_clinician_video_bio_url.py  0004_seed_license_types.py  0005_clinician_is_verified_clinician_npi_and_more.py
backend/wisely_api/core/: choices.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
backend/wisely_api/core/migrations/: 0002_user_following.py
backend/wisely_api/engagement/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/wisely_api/engagement/migrations/: 0001_initial.py
backend/wisely_api/readinglists/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/wisely_api/seekers/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/wisely_api/wisely_api/: settings.py  urls.py  wsgi.py
(+41 files in other folders)
