[project]
name = "wisely-api"
version = "0.1.0"
description = "Wisely — a book-review platform where only clinicians review, doubling as a therapist directory."
requires-python = ">=3.13"
dependencies = [
    "django>=5.1,<5.2",
    "djangorestframework>=3.15,<3.16",
    "pillow>=11.1",
    "psycopg2-binary>=2.9",
]
