[project]
name = "wisely-api"
version = "0.1.0"
description = "Wisely — a book-review platform where only clinicians review, doubling as a therapist directory."
requires-python = ">=3.13"
dependencies = [
    "dj-rest-auth>=7.2.0",
    "django>=5.1,<5.2",
    "django-allauth[socialaccount]>=65.18.0",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.15,<3.16",
    "djangorestframework-simplejwt>=5.5.1",
    "pillow>=11.1",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]
